Added tests:  - added the required dependencies and plugin to pom.xml  - changed RedisService constructor  - added another constructor with parameters and a field isSessionFactoryOwned to Runner  - created tests classes:   * AbstractHibernateTest   * CityRepositoryTest   * CountryRepositoryTest   * RedisServiceTest   * RunnerTest   * TransformDataServiceTest  - rebuild the artifact in releases